--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="css/reset.css">
   </head>
   <body>
-    <div class="google_head">
-      <img class="google" src="image/google_head.jpg" alt="Хром.jpg">
-    </div>
     <div class="bg1">
       <div class="header">
         <div class="logo">
@@ -22,19 +19,22 @@
             <p class="tel_2">+9-0123-456-890</p>
             <p class="e-mail">info@asia-holidays.com</p>
           </div>
-          <div class="countries">
-            <img class="flag" src="image/i_flag.png" alt="Флаги.png">
-            <nav>
-              <ul class="links">
-                <li class="link_1"><a href="#">Индия</a></li>
-                <li class="link_2"><a href="#">Непал</a></li>
-                <li class="link_3"><a href="#">Тибет</a></li>
-                <li class="link_4"><a href="#">Бутан</a></li>
-                <li class="link_5"><a href="#">Шри-Ланка</a></li>
-                <li class="link_6"><a href="#">Мальдивы</a></li>
-             </ul>
-            </nav>
-          </div>
+          <ul class="flags">
+            <li class="contries"><a class="maldives" href="#"></a></li>
+            <li class="contries"><a class="sri_lanka" href="#"></a></li>
+            <li class="contries"><a class="bhutan" href="#"></a></li>
+            <li class="contries"><a class="tibet" href="#"></a></li>
+            <li class="contries"><a class="nepal" href="#"></a></li>
+            <li class="contries"><a class="india" href="#"></a></li>
+          </ul>
+          <ul class="links">
+            <li class="link"><a href="#">Индия</a></li>
+            <li class="link"><a href="#">Непал</a></li>
+            <li class="link"><a href="#">Тибет</a></li>
+            <li class="link"><a href="#">Бутан</a></li>
+            <li class="link"><a href="#">Шри-Ланка</a></li>
+            <li class="link"><a href="#">Мальдивы</a></li>
+          </ul>
         </div>
       </div>
     </div>
@@ -80,12 +80,12 @@
               <div class="leftColumn">
                 <h1>Информация</h1>
                 <p class="lorem">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
-               </div>
-               <div class="centerColumn"></div>
-               <div class="rightColumn">
+              </div>
+              <div class="centerColumn"></div>
+              <div class="rightColumn">
                  <h1>Новости</h1>
                  <p class="lorem">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
-               </div>
+              </div>
              </div>
            </div>
          </div>
